--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@types/node": "^18.11.5",
     "axios": "^1.1.3",
-    "connected-react-router": "^6.9.3",
     "dotenv": "^16.0.3",
     "history": "^5.3.0",
     "immer-reducer": "^0.7.13",
@@ -20,11 +20,13 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "redux": "^4.2.0",
+    "redux-batched-subscribe": "^0.1.6",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-batched-subscribe": "^0.1.4",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
